# cg2

./: .gitignore  CMakeLists.txt  Makefile  README.md  start.sh  test.off
data_files/: rhino.off
framework/: CMakeLists.txt
framework/include/: cg2_framework.h  cg2_framework.hpp  face.hpp  kdtree.hpp  marching_cubes.hpp  mesh.hpp  parser.hpp  point.hpp  triangle.hpp
framework/include/Eigen/src/Cholesky/: LDLT.h  LLT.h
framework/include/Eigen/src/CholmodSupport/: CholmodSupport.h
framework/include/Eigen/src/Core/: ArrayBase.h  Assign.h  AssignEvaluator.h  Assign_MKL.h  BooleanRedux.h  CommaInitializer.h  CoreEvaluators.h  CoreIterators.h  CwiseBinaryOp.h  CwiseNullaryOp.h  DenseBase.h  DenseStorage.h  Diagonal.h  DiagonalMatrix.h  DiagonalProduct.h  Dot.h  Fuzzy.h  GeneralProduct.h  GenericPacketMath.h  GlobalFunctions.h  Map.h  MathFunctions.h  MathFunctionsImpl.h  MatrixBase.h  NestByValue.h  NoAlias.h  NumTraits.h  PlainObjectBase.h  Product.h  ProductEvaluators.h  Random.h  Redux.h  Ref.h  Replicate.h  ReturnByValue.h  Reverse.h  SelfAdjointView.h  Solve.h  SolveTriangular.h  SolverBase.h  (+6 more)
framework/include/Eigen/src/Eigenvalues/: ComplexEigenSolver.h  ComplexSchur.h  EigenSolver.h  GeneralizedSelfAdjointEigenSolver.h  HessenbergDecomposition.h  MatrixBaseEigenvalues.h  RealQZ.h  RealSchur.h  SelfAdjointEigenSolver.h  SelfAdjointEigenSolver_LAPACKE.h
framework/include/Eigen/src/Geometry/: AlignedBox.h  AngleAxis.h  ParametrizedLine.h  Quaternion.h  Scaling.h  Transform.h  Translation.h
framework/include/Eigen/src/Householder/: Householder.h  HouseholderSequence.h
framework/include/Eigen/src/IterativeLinearSolvers/: BasicPreconditioners.h  IncompleteLUT.h  IterativeSolverBase.h  SolveWithGuess.h
framework/include/Eigen/src/Jacobi/: Jacobi.h
framework/include/Eigen/src/LU/: FullPivLU.h  InverseImpl.h  PartialPivLU.h
framework/include/Eigen/src/OrderingMethods/: Eigen_Colamd.h  Ordering.h
framework/include/Eigen/src/PaStiXSupport/: PaStiXSupport.h
framework/include/Eigen/src/PardisoSupport/: PardisoSupport.h
framework/include/Eigen/src/QR/: ColPivHouseholderQR.h  CompleteOrthogonalDecomposition.h  FullPivHouseholderQR.h  HouseholderQR.h
framework/include/Eigen/src/SPQRSupport/: SuiteSparseQRSupport.h
framework/include/Eigen/src/SVD/: BDCSVD.h  JacobiSVD.h  JacobiSVD_LAPACKE.h  SVDBase.h  UpperBidiagonalization.h
framework/include/Eigen/src/SparseCholesky/: SimplicialCholesky.h
framework/include/Eigen/src/SparseCore/: AmbiVector.h  ConservativeSparseSparseProduct.h  SparseAssign.h  SparseBlock.h  SparseCompressedBase.h  SparseCwiseBinaryOp.h  SparseDenseProduct.h  SparseMatrix.h  SparseMatrixBase.h  SparseProduct.h  SparseSelfAdjointView.h  SparseSparseProductWithPruning.h  SparseVector.h
framework/include/Eigen/src/SparseLU/: SparseLU.h  SparseLU_Memory.h  SparseLU_column_dfs.h  SparseLU_gemm_kernel.h
framework/include/Eigen/src/SparseQR/: SparseQR.h
framework/include/Eigen/src/SuperLUSupport/: SuperLUSupport.h
framework/include/Eigen/src/UmfPackSupport/: UmfPackSupport.h
framework/include/Spectra/MatOp/: SparseCholesky.h
framework/src/: CMakeLists.txt  cg2_framework.cpp  kdtree.cpp  main.cpp  marching_cubes.cpp  mesh.cpp  parser.cpp  point.cpp
minqgl/: CMakeLists.txt  QGLViewerWidget.cpp  QGLViewerWidget.h  main.cpp  readme.txt
minqgl/include/: ImplicitSurface.hpp  QGLViewerWidget.hpp  SidebarWidget.hpp  shader.hpp  surfaces.hpp
minqgl/src/: CMakeLists.txt  ImplicitSurface.cpp  QGLViewerWidget.cpp  SidebarWidget.cpp  main.cpp  surfaces.cpp
(+65 files in other folders)
