CMAKE_MINIMUM_REQUIRED(VERSION 3.1)

FIND_PACKAGE(OpenGL REQUIRED)
FIND_PACKAGE(GLUT REQUIRED)
FIND_PATH(GLM_INCLUDE_DIR glm/glm.hpp HINTS /usr/include /usr/local/include /opt/local/include)
FIND_PACKAGE(Qt5Widgets REQUIRED)

INCLUDE_DIRECTORIES(${Qt5Widgets_INCLUDES})
INCLUDE_DIRECTORIES(${GLM_INCLUDE_DIR} ${GLUT_INCLUDE_DIR})
INCLUDE_DIRECTORIES(${CG2_SOURCE_DIR}/minqgl/include)
INCLUDE_DIRECTORIES(${CG2_SOURCE_DIR}/framework/include)

SET(CMAKE_AUTOMOC ON)
SET(CMAKE_INCLUDE_CURRENT_DIR ON)

# Compiler Settings
SET(CMAKE_CXX_STANDARD 14)
SET(GCC_COVERAGE_COMPILE_FLAGS "-Wall -O3")
SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${GCC_COVERAGE_COMPILE_FLAGS}")

# Source files
SET(app_SOURCES main.cpp QGLViewerWidget.cpp)

# Linking in our external framework library
LINK_DIRECTORIES(${CG2_SOURCE_DIR}/framework/src)

ADD_EXECUTABLE(cg2 ${app_SOURCES})
QT5_USE_MODULES(cg2 Widgets OpenGL)
TARGET_LINK_LIBRARIES(cg2 framework ${OPENGL_LIBRARIES} ${GLUT_LIBRARIES} ${Qt5Widgets_LIBRARIES})
